// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with tweet volume 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  onPress={[Function]}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "fontSize": 15,
        "fontWeight": "600",
      }
    }
  >
    NaN
    . 
    Sugar
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    112213 tweets
  </Text>
</TouchableOpacity>
`;

exports[`renders without crashing 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  onPress={[Function]}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "fontSize": 15,
        "fontWeight": "600",
      }
    }
  >
    NaN
    . 
    Nahir Galarza
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  />
</TouchableOpacity>
`;
